# School_21

./: .gitignore  .gitmodules
CPP_piscine/: .gitignore
CPP_piscine/cpp04/: test.cpp
C_Piscine/: README.md
C_Piscine/BSQ/: Makefile  bsq.h  func.c  func2.c  func3.c  main.c  map.perl
ExamRank/ExamRank_04/: .gitignore  micro_shell.c  microshell_azat.c  micsh.c
ExamRank/ExamRank_06/: mini_serv.c  my_serv.c  my_serv_smal.c  subject.ru.txt
Libft/: README.md
Libft/libft/: ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isdigit.c  ft_isprint.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memcmp.c  ft_memcpy.c  ft_memset.c  ft_putchar_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_strchr.c  ft_strlcat.c  ft_strlen.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_toupper.c  libft.h
Webserver/: Makefile  test.cpp
Webserver/config/: num1.conf  num2.conf
Webserver/pages/: CMakeLists.txt  about.html  big.txt  cgi.html  error404.html  file.txt  index.html  styles.css
Webserver/pages/cgi-bin/: b.c  b.cgi  c.c  env.cgi  env.cpp  upload.c  upload.cgi
Webserver/pages/directory/: ed.txt  file.txt  meean.txt
Webserver/pages/directory/qwer/: as.txt
ft_printf/: .gitignore  Makefile  README.md  ft_parser.c  ft_print_16.c  ft_print_nbr.c  ft_print_pointer.c  ft_print_str.c  ft_print_unsig.c  ft_printf.c  ft_printf_utils.c  libftprintf.h
get_next_line/: .gitignore  README.md  get_next_line.c  get_next_line.h  get_next_line_utils.c
minishell/: Makefile  README.md  name.out  test.sh
(+610 files in other folders)
